--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "Students",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "ts-node-dev src/app.ts"
   },
   "keywords": [],
   "author": "",
